bdr.BDR.scala.error
Compilation error:
BDR:1: error: identifier expected but 'false' found.
var fini: false
          ^